--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ input[type="text"].dinheiro-negativo { color: #ff5555; }
     margin-bottom: 8px;
     padding-bottom: 5px;
     font-weight: bold;
-    color: #ff4081;
+    color: #d8cdd1;
     display: flex;
     justify-content: space-between;
 }
@@ -124,6 +124,26 @@ input[type="text"].dinheiro-negativo { color: #ff5555; }
     .day {
         font-size: 14px;
     }
+}
+
+.main-title {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.main-title h1 {
+    color: var(--primary); /* Aquele rosa/pink que estamos usando */
+    font-size: 28px;
+    margin-bottom: 5px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.main-title p {
+    color: #888;
+    font-size: 14px;
+    margin-top: 0;
 }
 
 @media (max-width: 600px) {
